--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <section class="py-4">
         <div class="container">
-            <h1 class="mb-4 text-center text-dark">Movies Catalog</h1>
+            <h1 class="mb-4 text-center text-dark">Apple vs Samsung</h1>
             <div class="row">
                 <div class="col-4 mb-4">
                     <form action="https://echo.htmlacademy.ru" method="post">
                         <div class="mb-3">
-                            <input type="text" class="form-control" placeholder="Yor Name" aria-label="text" name="user__name">
+                            <input type="text" class="form-control" placeholder="Your Name" aria-label="text" name="user__name">
                         </div>
                         <div class="mb-3">
                             <input type="text" class="form-control" placeholder="Phone Number" aria-label="text" name="user__number">
@@ -37,15 +37,15 @@
                     <h2 class="text-dark">Bookmarked movies</h2>
                     <ul class="list-group">
                         <li class="list-group-item d-flex flex-column">
-                            Awenges: infinity War
+                            A 40
                             <button type="button" class="col-3 btn btn-danger mt-2">Remove</button>
                         </li>
                         <li class="list-group-item d-flex flex-column">
-                            Awenges: infinity War
+                        iPhone 12 Pro
                             <button type="button" class="col-3 btn btn-danger mt-2">Remove</button>
                         </li>
                         <li class="list-group-item d-flex flex-column">
-                            Awenges: infinity War
+                            iPhone 12 ProMax
                             <button type="button" class="col-3 btn btn-danger mt-2">Remove</button>
                         </li>
                     </ul>
@@ -151,16 +151,16 @@
                                     </div>
                                     <button type="button" class="btn btn-outline-primary">Watch trailer</button>
                                     <!-- Button trigger modal -->
-                                    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                                         More info
                                     </button>
                                     
                                     <!-- Modal -->
-                                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                    <h5 class="modal-title" id="exampleModalLabel1">Modal title</h5>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
