--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                         <div class="mb-3">
                             <input type="text" class="form-control" placeholder="Phone Number" aria-label="text" name="user__number">
                         </div>
-                        <select class="form-select mb-3" aria-label="Default select example">
+                        <select class="form-select mb-3" aria-label="Default select example" name="user_select">
                             <option selected disabled>All</option>
                             <option value="Tony">One</option>
                             <option value="Tony_Stark">Tony Stark</option>
                             <option value="Betmen">Betmen</option>
                         </select>
-                        <select class="form-select mb-3" aria-label="Default select example">
+                        <select class="form-select mb-3" aria-label="Default select example" name="user_selection">
                             <option selected disabled>Rating (high to low)</option>
-                            <option value="">Rating (low to high)</option>
+                            <option value="Raiting">Rating (low to high)</option>
                         </select>
                         <div class="d-grid mb-3">
                             <button class="btn btn-primary" type="submit">Search</button>
